--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="Division.js"></script>
     <script src="Particle.js"></script>
     <script src="Plinko.js"></script>
+    <script src="matter.js"></script>
 <script src="./p5.play.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
